# fcli

./: .cursorrules  .gitignore  .rgignore  .ripgreprc  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  base.cursorrules.bk  config.env  pyproject.toml  report.xml  requirements.txt  run.cmd  setup_vs_env.py
.agent/rules/: sdd-antigravity.md  security-and-autonomy.md  tool-usage.md
.claude/: settings.local.json
.obsidian/: templates.json  types.json  workspace.json
.omx/: metrics.json
.omx/logs/: notify-hook-2026-04-24.jsonl  notify-hook-2026-04-25.jsonl  tmux-hook-2026-04-21.jsonl  tmux-hook-2026-04-22.jsonl  tmux-hook-2026-04-23.jsonl  tmux-hook-2026-04-24.jsonl  tmux-hook-2026-04-25.jsonl  turns-2026-04-21.jsonl  turns-2026-04-22.jsonl  turns-2026-04-23.jsonl  turns-2026-04-24.jsonl  turns-2026-04-25.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
claude_agentic_template/: CLAUDE_template.md  claude_code_agentic_spec_first_multi_module_guide.md  huong_dan_thiet_ke_he_thong_claude_code_multi_module.md
claude_agentic_template/methodology/: 0_methodology.md  0_overview.md  0_specs_develop_idea.md  methodology.md
docs/: AGENTS.md  README.md
evals/: README.md
llm-wiki/: README.md  agent-verification.md  assumptions.md  codebase-map.md  contradiction-log.md  index.md  lessons-learned.md  open-questions.md  source-map.md
specs/: 10.openapi.yaml
src/: __init__.py  cli.py  errors.py  logging_config.py  main.py
tools/: README.md  init-obsidian-taxonomy.ps1  init-project.ps1  kb.ps1  kms_ci_audit.py
(+524 files in other folders)
